erDiagram
    ASSETACCOUNTS {
        string COA
        string PENENTUAN_TINDAKAN
        int DAERAH_PENYUSUTAN
        string AKUSISI_BIAYA_PRODUKSI
        string KLIRING_PENG_PENJ_ASET
        string KEUNTUNGAN_DARI_PENJ_AS
        string PENDAPATAN_APC
        string KERUGIAN_PENJUALAN_ASET
        string KERUGIAN_PENSIUN_ASET
        date CREATED_DATE
        date UPDATE_DATE
    }
    ASSETCLASSES {
        int ID
        string ASET_KELAS
        string DIBUAT_OLEH
        date DIBUAT_TANGGAL
        string DIEDIT_OLEH
        date DIEDIT_TGL
        string DESKRIPSI
        string KET
        date CREATED_DATE
        date UPDATE_DATE
        int GROUPASSET_ID
        int GROUPCLASSES_ID
        string FLAG
    }
    ASSETS {
        int ID
        string BRANCHE_ID
        int ASSETCLASSES_ID
        string NO_ASET
        string SUB_ASET
        string NAMA_ASET
        int KELAS_ASET
        string KODE_CABANG
        string PUSAT_BIAYA
        date TGL_KAPITALISASI
        date TGL_MULAI_PENYUSUTAN
        int DIMENSI_NILAI
        string DIMENSI_SATUAN
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
        string STATUS
        int PERIODE
        int TAHUN
        int GROUPCLASSES_ID
        int GROUPASSET_ID
        int SISA_MANFAAT
        string PROFIT_CENTER
    }
    ASSET_SAP_FAILED {
        int ID
        string NO_ASET
        int PERIODE
        int TAHUN
        string EXCEPTION
        string REQUEST
        date CREATED_AT
        string CREATED_BY
        string NAMA_ASET
        string KODE_PLANT
    }
    BRANCHES {
        string ID_CABANG
        string NAMA_CABANG
        date CREATED_DATE
        date UPDATE_DATE
        string KODE_REGIONAL
        string KODE_TERMINAL
        string KODE_SAP
        string PROFIT_CENTER
        int FLAG_APPROVE
    }
    COSTCENTERS {
        int ID
        string KODE_PUSAT_BIAYA
        string NAMA_PUSAT_BIAYA
        string FLAG
        date CREATED_DATE
        date UPDATE_DATE
    }
    DEPRECIATIONS {
        string KODE_PENYUSUTAN
        string NAMA_PENYUSUTAN
        date CREATED_DATE
        date UPDATE_DATE
    }
    DEPRECIATION_VALUES {
        int ID
        string NO_ASET
        string SUB_ASET
        int NILAI_SUSUT
        int AKUMULASI_PENYUSUTAN
        int NILAI_PEROLEHAN
        int NILAI_BUKU
        int NILAI_RESIDU
        int PERIODE
        int TAHUN
        string CREATED_BY
        date CREATED_ON
        int PENURUNAN_AKUMULASI_NILAI
        int PEMULIHAN_AKUMULASI_NILAI
        int AKUMULASI_PENYUSUTAN_NEW
        int PENYUSUTAN_SD_BLN_BERJALAN
    }
    DETAILASSETS {
        int ID
        int ASSET_ID
        int INSURANCE_ID
        int DEPRECIATION_VALUE_ID
        int ELIMINATION_ID
        int PBB_ID
        string NO_ASET
        string DETAIL_MEREK
        string DETAIL_NO_RANGKA
        string DETAIL_NO_MESIN
        string DETAIL_NO_PLAT
        string SUB_ASET
        string DETAIL_TIPE
        string KETERANGAN
        date PENURUNAN_TGL_PEMBUKUAN
        string PENURUNAN_LEMBAGA
        string PENURUNAN_NOMOR
        date PENURUNAN_TGL_LAPORAN
        date PEMULIHAN_TGL_PEMBUKUAN
        string PEMULIHAN_LEMBAGA
        string PEMULIHAN_NOMOR
        date PEMULIHAN_TGL_LAPORAN
        int NO_ITEM
        string LOKASI
        string KORDINAT
        string KONDISI_FISIK
        string STATUS_PEROLEHAN
        string BUKTI_KEPEMILIKAN
        string BUKTI_RINCIAN
        string BUKTI_NO
        date BUKTI_TGL
        string BUKTI_KETERANGAN
        string BUKTI_FISIK_DOKUMEN
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
        string STATUS_ITEMINISASI
        int PERIODE
        int TAHUN
        string STATUS_PENGELOLAAN
        string HUKUM_RINCIAN
        string HUKUM_NOMOR
        string HUKUM_KETERANGAN
        string ASURANSI
        string KJPP_UMUR
        int KJPP_NILAI
        string KJPP_PELAKSANA
        int KJPP_NO
        date KJPP_TGL
        string USULAN_PENGHAPUSAN
        string STATUS_ASURANSI
        string TINDAK_LANJUT
        string TINDAK_LANJUT_DD
        string KJPP_UMUR_ASURANSI
        int KJPP_NILAI_ASURANSI
        string KJPP_PELAKSANA_ASURANSI
        int KJPP_NO_ASURANSI
        date KJPP_TGL_ASURANSI
    }
    DIMENSI_SATUAN {
        string NAME
    }
    ELIMINATION {
        int ID
        string NO_ASET
        string SUB_ASET
        int NO_ITEM
        string PENGHAPUSAN_RINCIAN
        string PENGHAPUSAN_NOMOR
        string PENGHAPUSAN_KETERANGAN
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
        string STATUS
        int PERIODE
        int TAHUN
        date TANGGAL_USULAN_PENGHAPUSAN
    }
    GROUPASSETS {
        int ID
        string NAMA_GROUP
    }
    GROUPCLASSES {
        int ID
        string NAMA_GROUP_KELAS
        int KODE
    }
    INSURANCES {
        int ID
        string NO_ASET
        string SUB_ASET
        int NO_ITEM
        string RINCIAN
        string NO_POLIS
        date TGL_POLIS
        int PREMI
        string KETERANGAN_ASURANSI
        string ALASAN_ASURANSI
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
        string STATUS
        int PERIODE
        int TAHUN
        int NO_ASURANSI
        string SCAN
    }
    MASTER_ASURANSI {
        int ID
        string NO_POLIS
        string NAMA_POLIS
        date TGL_POLIS
        int PREMI
        string JANGKA_WAKTU
        int ID_REGIONAL
        string SCAN_POLIS
        string ACTIVE
        string CREATED_BY
        date CREATED_ON
        string UPDATED_BY
        date UPDATED_ON
    }
    MONITORING_FAILED {
        int ID
        string DESCRIPTION
        int PERIODE
        int TAHUN
        string MODEL
        date CREATED_AT
        string EXCEPTION
        string REQUEST
    }
    MONITORING_INTEGRATOR {
        int ID
        string DESCRIPTION
        int PERIODE
        int TAHUN
        string MODEL
        date CREATED_AT
    }
    NOTIFIKASI {
        int DETAILASSET_ID
        string NO_ASET
        int PERIODE
        int TAHUN
        string HEADER
        string ISI_NOTIFIKASI
        string JENIS_NOTIFIKASI
        string STATUS
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
        int ID_NOTIFIKASI
        string KODE_CABANG
        string DETAIL_MEREK
        string DETAIL_NO_RANGKA
        string DETAIL_NO_MESIN
        string DETAIL_NO_PLAT
        string SUB_ASET
        string DETAIL_TIPE
        string KETERANGAN
        date PENURUNAN_TGL_PEMBUKUAN
        string PENURUNAN_LEMBAGA
        string PENURUNAN_NOMOR
        date PENURUNAN_TGL_LAPORAN
        date PEMULIHAN_TGL_PEMBUKUAN
        string PEMULIHAN_LEMBAGA
        string PEMULIHAN_NOMOR
        date PEMULIHAN_TGL_LAPORAN
        int NO_ITEM
        string LOKASI
        string KORDINAT
        string KONDISI_FISIK
        string STATUS_PEROLEHAN
        string BUKTI_KEPEMILIKAN
        string BUKTI_RINCIAN
        string BUKTI_NO
        date BUKTI_TGL
        string BUKTI_KETERANGAN
        string BUKTI_FISIK_DOKUMEN
        string STATUS_ITEMINISASI
        string STATUS_PENGELOLAAN
        string HUKUM_RINCIAN
        string HUKUM_NOMOR
        string HUKUM_KETERANGAN
        string ASURANSI
        string KJPP_UMUR
        int KJPP_NILAI
        string KJPP_PELAKSANA
        int KJPP_NO
        date KJPP_TGL
        string USULAN_PENGHAPUSAN
        string STATUS_ASURANSI
        string TINDAK_LANJUT
        string TINDAK_LANJUT_DD
        string KJPP_UMUR_ASURANSI
        int KJPP_NILAI_ASURANSI
        string KJPP_PELAKSANA_ASURANSI
        int KJPP_NO_ASURANSI
        date KJPP_TGL_ASURANSI
    }
    PBB {
        int ID
        string NO_ASET
        string SUB_ASET
        int NO_ITEM
        int NJOP
        int NO_PBB
        date TGL_PBB
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
        int PERIODE
        int TAHUN
        string KETERANGAN_PBB
    }
    PERIOD {
        int ID
        date START_DATE
        date END_DATE
        string CREATED_BY
        date CREATED_ON
    }
    PERIOD_REQUEST {
        int ID
        date START_DATE
        date END_DATE
        string STATUS
        string CREATED_BY
        date CREATED_ON
        string KONFIRM1_BY
        date KONFIRM1_ON
        string KONFIRM_BY
        date KONFIRM_ON
        string KODE_CABANG
        int ID_USER
    }
    PICTUREASSETS {
        int ID
        int DETAILASSET_ID
        string NO_ASET
        string SUB_ASET
        int NO_ITEM
        string PATH_SURAT
        string FLAG
        date CREATED_ON
        int JENIS_FOTO
    }
    REFERENCE_DATA {
        int ID
        int KATEGORI
        string ENTITY
        string NAMA_ENTITY
        string FLAG
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
    }
    ROLES {
        int ID
        string NAME
        string ID_MENU
        string STATUS
        int ID_INTEGRATION
    }
    USERS {
        int ID
        string NAME
        string EMAIL
        date EMAIL_VERIFIED_AT
        string PASSWORD
        string REMEMBER_TOKEN
        date CREATED_AT
        date UPDATED_AT
        string ID_CABANG
        int ID_ROLE
        string STATUS
        string API_TOKEN
        string KODE_REGIONAL
    }
    USES {
        int ID
        int DETAILASSET_ID
        string NO_ASET
        string SUB_ASET
        int NO_ITEM
        string STATUS_PENGELOLAAN_RINCIAN
        string NAMA_PENYEWA
        string NO_KONTRAK_SEWA
        date AWAL_PERJANJIAN
        date AKHIR_PERJANJIAN
        string CREATED_BY
        date CREATED_ON
        string MODIFIED_BY
        date MODIFIED_ON
        string PIHAK_YANG_MENEMPATI
        int TAHUN
        int PERIODE
        string USES_TYPE
        int NO_USES
        string SCAN
    }
    ASSETCLASSES ||--o{ ASSETS : "has"
    BRANCHES ||--o{ ASSETS : "has"
    GROUPASSETS ||--o{ ASSETS : "has"
    ASSETS ||--o{ DETAILASSETS : "has"
    DEPRECIATION_VALUES ||--o{ DETAILASSETS : "has"
    ELIMINATION ||--o{ DETAILASSETS : "has"
    INSURANCES ||--o{ DETAILASSETS : "has"
    PBB ||--o{ DETAILASSETS : "has"
    REFERENCE_DATA ||--o{ DETAILASSETS : "has"
    DETAILASSETS ||--o{ NOTIFIKASI : "has"
    DETAILASSETS ||--o{ PICTUREASSETS : "has"
    DETAILASSETS ||--o{ USES : "has"
    REFERENCE_DATA ||--o{ USES : "has"
